增加了 stable 可用的 dll 加载器 用 clippy 优化了代码

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 members = [
     "betterncm-macro",
+    "betterncm-loader",
     "betterncm-plugin-example",
     "betterncm-plugin-api",
     "cef-sys",
