可以 HTTP Hijack 了

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,11 @@ members = [
     "cef-sys",
     "cef",
 ]
+
+[profile.release]
+lto = true
+codegen-units = 1
+panic = "abort"
+opt-level = "z"
+debug = false
+strip = true
