--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,2 +1,5 @@
 [build]
 target = "i686-pc-windows-msvc"
+
+# [target.'cfg(all(windows, target_env = "msvc"))']
+# rustflags = ["-C", "target-feature=+crt-static"]
