--- a/betterncm-loader/Cargo.toml
+++ b/betterncm-loader/Cargo.toml
@@ -21,6 +21,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 url-escape = "0.1.1"
 zip = "0.6.3"
+once_cell = "1.17"
+nipper = "0.1.9"
 detour = { version = "0.8", default-features = false }
 windows = { version = "*", features = [
     "Win32_Foundation",
@@ -30,5 +32,11 @@ windows = { version = "*", features = [
     "Win32_System_LibraryLoader",
     "Win32_System_Diagnostics_Debug",
     "Win32_UI_WindowsAndMessaging",
+    "Win32_System_Diagnostics_Debug",
+    "Win32_System_Kernel",
+    "Win32_Graphics_Gdi",
     "Win32_System_Threading",
 ] }
+
+[dev-dependencies]
+winreg = "0.10"
