--- a/betterncm-loader/Cargo.toml
+++ b/betterncm-loader/Cargo.toml
@@ -24,6 +24,11 @@ zip = "0.6.3"
 once_cell = "1.17"
 nipper = "0.1.9"
 detour = { version = "0.8", default-features = false }
+ansi_term = "0.12"
+tracing = "0.1"
+tracing-subscriber = "0.3"
+raw-window-handle = "*"
+window-shadows = "*"
 windows = { version = "*", features = [
     "Win32_Foundation",
     "Win32_System_Console",
@@ -32,9 +37,30 @@ windows = { version = "*", features = [
     "Win32_System_LibraryLoader",
     "Win32_System_Diagnostics_Debug",
     "Win32_UI_WindowsAndMessaging",
-    "Win32_System_Diagnostics_Debug",
+    "Win32_Graphics_Dwm",
     "Win32_System_Kernel",
     "Win32_Graphics_Gdi",
+    "Win32_Graphics_Direct3D11",
+    "Win32_Graphics_Direct3D",
+    "Win32_Graphics_Dxgi",
+    "Win32_Graphics_Dxgi_Common",
+    "Win32_System_Threading",
+] }
+windows-sys = { version = "*", features = [
+    "Win32_Foundation",
+    "Win32_System_Console",
+    "Win32_System_SystemServices",
+    "Win32_System_SystemInformation",
+    "Win32_System_LibraryLoader",
+    "Win32_System_Diagnostics_Debug",
+    "Win32_UI_WindowsAndMessaging",
+    "Win32_Graphics_Dwm",
+    "Win32_System_Kernel",
+    "Win32_Graphics_Gdi",
+    "Win32_Graphics_Direct3D11",
+    "Win32_Graphics_Direct3D",
+    "Win32_Graphics_Dxgi",
+    "Win32_Graphics_Dxgi_Common",
     "Win32_System_Threading",
 ] }
 
