--- a/betterncm-loader/Cargo.toml
+++ b/betterncm-loader/Cargo.toml
@@ -24,6 +24,7 @@ zip = "0.6.3"
 once_cell = "1.17"
 nipper = "0.1.9"
 detour = { version = "0.8", default-features = false }
+rayon = "1.6"
 ansi_term = "0.12"
 tracing = "0.1"
 tracing-subscriber = "0.3"
