--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "BetterNCM"]
-	url = https://github.com/MicroCBer/BetterNCM
-	path = BetterNCM
+[submodule "libcef"]
+	path = libcef
+	url = https://github.com/BetterNCM/libcef
