--- a/betterncm-loader/Cargo.toml
+++ b/betterncm-loader/Cargo.toml
@@ -19,6 +19,8 @@ path-absolutize = "3"
 dirs = "4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+toml = "0.7"
+notify = "5.1.0"
 url-escape = "0.1.1"
 zip = "0.6.3"
 once_cell = "1.17"
