--- a/betterncm-loader/Cargo.toml
+++ b/betterncm-loader/Cargo.toml
@@ -19,12 +19,12 @@ path-absolutize = "3"
 dirs = "4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-toml = "0.7"
 notify = "5.1.0"
-url-escape = "0.1.1"
 zip = "0.6.3"
 once_cell = "1.17"
 nipper = "0.1.9"
+rcgen = "0.10"
+actix-web = { version = "4", features = ["rustls"] }
 detour = { version = "0.8", default-features = false }
 rayon = "1.6"
 ansi_term = "0.12"
@@ -47,6 +47,10 @@ windows = { version = "*", features = [
     "Win32_Graphics_Direct3D",
     "Win32_Graphics_Dxgi",
     "Win32_Graphics_Dxgi_Common",
+    "Win32_System_Diagnostics_ToolHelp",
+    "Win32_UI_Shell",
+    "Win32_Security",
+    "Win32_System_Registry",
     "Win32_System_Threading",
 ] }
 windows-sys = { version = "*", features = [
@@ -64,8 +68,15 @@ windows-sys = { version = "*", features = [
     "Win32_Graphics_Direct3D",
     "Win32_Graphics_Dxgi",
     "Win32_Graphics_Dxgi_Common",
+    "Win32_System_Diagnostics_ToolHelp",
+    "Win32_UI_Shell",
+    "Win32_Security",
+    "Win32_System_Registry",
     "Win32_System_Threading",
 ] }
+rand = "0.8.5"
+rustls = "0.20.8"
+semver = "1.0.16"
 
 [dev-dependencies]
-winreg = "0.10"
+winreg = "0.11"
