--- a/betterncm-loader/Cargo.toml
+++ b/betterncm-loader/Cargo.toml
@@ -86,6 +86,8 @@ audioviz = "0.5.0"
 interprocess = "1.2.1"
 byteorder = "1.4.3"
 drain_filter_polyfill = "0.1.3"
+tokio = { version = "*", features = ["fs"] }
+actix-files = "0.6.2"
 
 [dev-dependencies]
 winreg = "0.11"
