兼容 BetterNCM 1.1.0 增加可选加载原版 BetterNCMII.dll 的能力 增加更多垃圾文件夹清理 增加配置组件加载出错警告

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libcef"]
 	path = libcef
 	url = https://github.com/BetterNCM/libcef
+[submodule "BetterNCM"]
+	path = BetterNCM
+	url = https://github.com/MicroCBer/BetterNCM.git
