--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "betterncm-loader",
     "betterncm-plugin-example",
     "betterncm-plugin-api",
+    "betterncm-plugin-api-sys",
     "cef-sys",
     "cef",
 ]
